[gd_scene load_steps=160 format=2]

[ext_resource path="res://Entities/Player/player-idle-sheet.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player/player-run-sheet.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/player-jump-sheet.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/player-fall-sheet.png" type="Texture" id=4]
[ext_resource path="res://Entities/Player/player-ground-sheet.png" type="Texture" id=5]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=6]
[ext_resource path="res://Systems/StateMachine.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Player/States/Idle.gd" type="Script" id=8]
[ext_resource path="res://Entities/Player/States/Run.gd" type="Script" id=9]
[ext_resource path="res://Entities/Player/States/Jump.gd" type="Script" id=10]
[ext_resource path="res://Entities/Player/States/Fall.gd" type="Script" id=11]
[ext_resource path="res://Entities/Player/States/Ground.gd" type="Script" id=12]
[ext_resource path="res://Systems/Health.gd" type="Script" id=13]
[ext_resource path="res://Entities/Player/player-hit-sheet.png" type="Texture" id=14]
[ext_resource path="res://Entities/Player/player-dead_hit-sheet.png" type="Texture" id=15]
[ext_resource path="res://Entities/Player/player-dead_ground-sheet.png" type="Texture" id=16]
[ext_resource path="res://Entities/Player/States/Hurt.gd" type="Script" id=17]
[ext_resource path="res://Entities/Player/player-attack-sheet.png" type="Texture" id=18]
[ext_resource path="res://Entities/Player/States/Attack.gd" type="Script" id=19]
[ext_resource path="res://Entities/Player/States/DeadHit.gd" type="Script" id=20]
[ext_resource path="res://Entities/Player/States/DeadGround.gd" type="Script" id=21]
[ext_resource path="res://Entities/Player/Blip_select 22 (1).wav" type="AudioStream" id=22]
[ext_resource path="res://Systems/RandomAudioPlayer.tscn" type="PackedScene" id=23]
[ext_resource path="res://Entities/Player/swish-11.wav" type="AudioStream" id=24]
[ext_resource path="res://Entities/Player/swish-12.wav" type="AudioStream" id=25]
[ext_resource path="res://Entities/Player/swish-13.wav" type="AudioStream" id=26]
[ext_resource path="res://Entities/Player/swish-10.wav" type="AudioStream" id=27]
[ext_resource path="res://Entities/Player/wood01.ogg" type="AudioStream" id=28]
[ext_resource path="res://Entities/Player/States/DoorIn.gd" type="Script" id=29]
[ext_resource path="res://Entities/Player/wood02.ogg" type="AudioStream" id=30]
[ext_resource path="res://Entities/Player/States/DoorOut.gd" type="Script" id=31]
[ext_resource path="res://Entities/Player/player-door-in-sheet.png" type="Texture" id=32]
[ext_resource path="res://Entities/Player/player-door-out-sheet.png" type="Texture" id=33]
[ext_resource path="res://Entities/Player/bomb-bar-bg.png" type="Texture" id=34]
[ext_resource path="res://Entities/Player/bomb-bar-fill.png" type="Texture" id=35]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 348, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 406, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 464, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 522, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 580, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 638, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 696, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 754, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 812, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 870, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 928, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 986, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 1044, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 1102, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 1160, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 1218, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 1276, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 1334, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 1392, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 1450, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 14 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 14 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 14 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 14 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 14 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 14 )
region = Rect2( 348, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 14 )
region = Rect2( 406, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 18 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 18 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 18 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 18 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 18 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 18 )
region = Rect2( 348, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 32 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 32 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 32 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 32 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 32 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 32 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 32 )
region = Rect2( 348, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 32 )
region = Rect2( 406, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 32 )
region = Rect2( 464, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 32 )
region = Rect2( 522, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 32 )
region = Rect2( 580, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 32 )
region = Rect2( 638, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 32 )
region = Rect2( 696, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 32 )
region = Rect2( 754, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 32 )
region = Rect2( 812, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 32 )
region = Rect2( 870, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 15 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 15 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 15 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 15 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 15 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 16 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 16 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 16 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 33 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 33 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 33 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 33 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 33 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 33 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 33 )
region = Rect2( 348, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 33 )
region = Rect2( 406, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 33 )
region = Rect2( 464, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 33 )
region = Rect2( 522, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 33 )
region = Rect2( 580, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 33 )
region = Rect2( 638, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 33 )
region = Rect2( 696, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 33 )
region = Rect2( 754, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 33 )
region = Rect2( 812, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 33 )
region = Rect2( 870, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 58, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 116, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 174, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 2 )
region = Rect2( 232, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 290, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 348, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 406, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 464, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 522, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 580, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 638, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 2 )
region = Rect2( 696, 0, 58, 58 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 754, 0, 58, 58 )

[sub_resource type="SpriteFrames" id=107]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "hit",
"speed": 20.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "jump",
"speed": 20.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "attack",
"speed": 20.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "door_in",
"speed": 20.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "fall",
"speed": 20.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": false,
"name": "dead_hit",
"speed": 20.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": false,
"name": "ground",
"speed": 20.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": false,
"name": "dead_ground",
"speed": 20.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": false,
"name": "door_out",
"speed": 20.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=108]
extents = Vector2( 17, 23 )

[sub_resource type="RectangleShape2D" id=109]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=110]
extents = Vector2( 14, 27 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 34 )
region = Rect2( 0, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 34 )
region = Rect2( 352, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 34 )
region = Rect2( 704, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 34 )
region = Rect2( 1056, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 34 )
region = Rect2( 1408, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 34 )
region = Rect2( 1760, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 34 )
region = Rect2( 2112, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 34 )
region = Rect2( 2464, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 34 )
region = Rect2( 2816, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 34 )
region = Rect2( 3168, 0, 352, 320 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 34 )
region = Rect2( 3520, 0, 352, 320 )

[sub_resource type="SpriteFrames" id=122]
animations = [ {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=123]
extents = Vector2( 17, 23 )

[sub_resource type="RectangleShape2D" id=124]
extents = Vector2( 5, 2 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
collision_layer = 2
collision_mask = 72
script = ExtResource( 6 )

[node name="Character" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Character"]
position = Vector2( 0, -1 )
frames = SubResource( 107 )
animation = "idle"

[node name="Hurtbox" type="Area2D" parent="Character"]
visible = false
position = Vector2( 5, 4 )
collision_layer = 2
collision_mask = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Hurtbox"]
shape = SubResource( 108 )

[node name="PunchHitbox" type="Area2D" parent="Character" groups=[
"player_attack",
]]
visible = false
position = Vector2( 22, 7 )
collision_layer = 32
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/PunchHitbox"]
shape = SubResource( 109 )

[node name="DoorHitbox" type="Area2D" parent="Character"]
position = Vector2( 5, 0 )
collision_layer = 256
collision_mask = 256
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/DoorHitbox"]
shape = SubResource( 110 )

[node name="StateMachine" parent="Character" instance=ExtResource( 7 )]
actor_path = NodePath("../..")

[node name="Idle" type="Node" parent="Character/StateMachine"]
script = ExtResource( 8 )
fsm_path = NodePath("..")

[node name="Run" type="Node" parent="Character/StateMachine"]
script = ExtResource( 9 )
fsm_path = NodePath("..")

[node name="Jump" type="Node" parent="Character/StateMachine"]
script = ExtResource( 10 )
fsm_path = NodePath("..")

[node name="Fall" type="Node" parent="Character/StateMachine"]
script = ExtResource( 11 )
fsm_path = NodePath("..")

[node name="JumpPressTimer" type="Timer" parent="Character/StateMachine/Fall"]
wait_time = 0.07
one_shot = true

[node name="Ground" type="Node" parent="Character/StateMachine"]
script = ExtResource( 12 )
fsm_path = NodePath("..")

[node name="Hurt" type="Node" parent="Character/StateMachine"]
script = ExtResource( 17 )
fsm_path = NodePath("..")

[node name="Attack" type="Node" parent="Character/StateMachine"]
script = ExtResource( 19 )
fsm_path = NodePath("..")

[node name="DeadHit" type="Node" parent="Character/StateMachine"]
script = ExtResource( 20 )
fsm_path = NodePath("..")

[node name="HitTimer" type="Timer" parent="Character/StateMachine/DeadHit"]
wait_time = 0.3
one_shot = true

[node name="DeadGround" type="Node" parent="Character/StateMachine"]
script = ExtResource( 21 )
fsm_path = NodePath("..")

[node name="DeathTimer" type="Timer" parent="Character/StateMachine/DeadGround"]
wait_time = 2.0
one_shot = true

[node name="DoorIn" type="Node" parent="Character/StateMachine"]
script = ExtResource( 29 )
fsm_path = NodePath("..")

[node name="DoorOut" type="Node" parent="Character/StateMachine"]
script = ExtResource( 31 )
fsm_path = NodePath("..")

[node name="Health" type="Node" parent="Character"]
script = ExtResource( 13 )
actor_path = NodePath("../..")
max_health = 3

[node name="StepsOnWoodSFX" parent="Character" instance=ExtResource( 23 )]
volume_db = 12.0
pitch_scale = 0.7
bus = "Sound"
audio_files = [ ExtResource( 28 ), ExtResource( 30 ) ]

[node name="Bombs" type="Node2D" parent="."]

[node name="BombBar" type="Control" parent="Bombs"]
visible = false
margin_left = 5.0
margin_top = -28.0
margin_right = 45.0
margin_bottom = 12.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarBackground" type="AnimatedSprite" parent="Bombs/BombBar"]
frames = SubResource( 122 )
frame = 10
playing = true

[node name="BarFill" type="TextureProgress" parent="Bombs/BombBar"]
margin_left = -32.0
margin_top = -14.0
margin_right = 30.0
margin_bottom = 26.0
texture_progress = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombCooldownTimer" type="Timer" parent="Bombs"]
wait_time = 0.5
one_shot = true

[node name="BombTween" type="Tween" parent="Bombs"]

[node name="BombSpawn" type="Position2D" parent="Bombs"]
position = Vector2( 0, 12 )

[node name="BombPlaceSFX" type="AudioStreamPlayer" parent="Bombs"]
stream = ExtResource( 22 )
pitch_scale = 0.8
bus = "Sound"

[node name="BombSwishSFX" parent="Bombs" instance=ExtResource( 23 )]
bus = "Sound"
audio_files = [ ExtResource( 27 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5, 4 )
shape = SubResource( 123 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 20, 25 )
shape = SubResource( 124 )
[connection signal="animation_finished" from="Character/AnimatedSprite" to="Character/StateMachine/DoorIn" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Character/AnimatedSprite" to="Character/StateMachine/DoorOut" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Character/AnimatedSprite" to="Character/StateMachine/Attack" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Character/AnimatedSprite" to="Character/StateMachine/Ground" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/DoorIn" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/Jump" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/Fall" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/DoorOut" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/Attack" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/Idle" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/Hurtbox" to="Character/StateMachine/Run" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Character/PunchHitbox" to="Character/StateMachine/Run" method="_on_PunchHitbox_area_entered"]
[connection signal="area_entered" from="Character/DoorHitbox" to="." method="_on_DoorHitbox_area_entered"]
[connection signal="area_exited" from="Character/DoorHitbox" to="." method="_on_DoorHitbox_area_exited"]
[connection signal="timeout" from="Character/StateMachine/DeadHit/HitTimer" to="Character/StateMachine/DeadHit" method="_on_HitTimer_timeout"]
[connection signal="timeout" from="Character/StateMachine/DeadGround/DeathTimer" to="Character/StateMachine/DeadGround" method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Bombs/BombCooldownTimer" to="." method="_on_BombCooldownTimer_timeout"]
